--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,7 @@
-{}
+{
+	"workbench.colorCustomizations": {
+		"tab.activeBorder": "#00B62B",
+		"statusBar.background": "#00B62B",
+		"statusBar.foreground": "#ffffff"
+	}
+}
